<resources>
    <string name="app_name">Five Tribes Score</string>
    <string name="jugador1">Jugador 1</string>
    <string name="jugador2">Jugador 2</string>
    <string name="jugador3">Jugador 3</string>
    <string name="jugador4">Jugador 4</string>
    <string name="valor_0">0</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="tit_actualizar">Introduce un nuevo valor</string>
    <string name="Jugadores">Jugadores</string>
    <string name="nobles">Nobles</string>
    <string name="sabios">Sabios</string>
    <string name="camellos">Camellos</string>
    <string name="djins">Djins</string>
    <string name="castillos">Castillos</string>
    <string name="monedas">Monedas</string>
    <string name="mercado">Mercado</string>
    <string name="palmeras">Palmeras</string>
    <string name="total">Total</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="marfil">Marfil</string>
    <string name="joyas">Joyas</string>
    <string name="oro">Oro</string>
    <string name="papiros">Papiros</string>
    <string name="seda">Seda</string>
    <string name="especias">Especias</string>
    <string name="pescado">Pescado</string>
    <string name="trigo">Trigo</string>
    <string name="ceramica">Cerámica</string>
    <string name="dialogoMercado">Indica que mercancias tienes</string>
    <string name="dialogoMonedas">Indica que monedas tienes</string>
    <string name="dialogoMonedas1">Monedas de valor 1</string>
    <string name="dialogoMonedas5">Monedas de valor 5</string>
    <string name="dialogoNobles">Indica cuantos nobles tienes</string>
    <string name="dialogoSabios">Indica cuantos sabios tienes</string>
    <string name="dialogoPalmeras">Indica cuantas palmeras tienes</string>
    <string name="dialogoCastillos">Indica cuantos castillos tienes</string>
    <string name="dialogoCamellos">Indica cuantos camellos tienes</string>
    <string name="dialogoCamellos4">Casillas de valor 4</string>
    <string name="dialogoCamellos5">Casillas de valor 5</string>
    <string name="dialogoCamellos6">Casillas de valor 6</string>
    <string name="dialogoCamellos8">Casillas de valor 8</string>
    <string name="dialogoCamellos10">Casillas de valor 10</string>
    <string name="dialogoCamellos12">Casillas de valor 12</string>
    <string name="dialogoCamellos15">Casillas de valor 15</string>
    <string name="incrementar">Incrementar</string>
    <string name="decrementar">Decrementar</string>

</resources>
