<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_noble"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDialogTitulo"
        style="@style/DialogoTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/camellos" />

    <TextView
        android:id="@+id/tvDialogDesc"
        style="@style/DialogoTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:paddingTop="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDialogTitulo"
        app:layout_constraintTop_toTopOf="@id/tvDialogTitulo">

        <ImageView
            android:id="@+id/ivDecrementar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/decrementar"
            app:srcCompat="@drawable/ic_minus" />

        <TextView
            android:id="@+id/contador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/valor_0"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/ivIncrementar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_plus" />
    </LinearLayout>

    <Button
        android:id="@+id/bEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="24dp"
        android:text="Enviar"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogTitulo"
        tools:layout_editor_absoluteX="-16dp" />

</LinearLayout>