<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ScrollView
        android:id="@+id/ScrollMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:id="@+id/linearmain"
            android:layout_width="match_parent"

            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/linearLayoutJugadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iVtitulo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="28"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/titulo"
                    android:contentDescription="@string/Jugadores"/>

                <TextView
                    android:id="@+id/tv_jugador0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="18"
                    android:text="@string/jugador1"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_jugador1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="18"
                    android:text="@string/jugador2"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_jugador2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="18"
                    android:text="@string/jugador3"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_jugador3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="18"
                    android:text="@string/jugador4"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayoutMonedas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutJugadores">

                <ImageView
                    android:id="@+id/ivMonedas"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="28"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/monedas"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/monedas" />

                <TextView
                    android:id="@+id/tv_moneda0"
                    style="@style/Casilla.Moneda"
                    android:text="@string/valor_0" />

                <TextView
                    android:id="@+id/tv_moneda1"
                    style="@style/Casilla.Moneda"
                    android:text="@string/valor_0" />

                <TextView
                    android:id="@+id/tv_moneda2"
                    style="@style/Casilla.Moneda"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_moneda3"
                    style="@style/Casilla.Moneda"
                    android:text="@string/valor_0"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutNobles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#F9F29B"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutMonedas">

                <ImageView
                    android:id="@+id/iVNobles"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="28"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/nobles"
                    android:contentDescription="@string/nobles"/>

                <TextView
                    android:id="@+id/tv_noble0"
                    style="@style/Casilla.Noble"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_noble1"
                    style="@style/Casilla.Noble"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_noble2"
                    style="@style/Casilla.Noble"
                    android:text="@string/valor_0" />

                <TextView
                    android:id="@+id/tv_noble3"
                    style="@style/Casilla.Noble"
                    android:text="@string/valor_0"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutSabios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E1DFD6"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutNobles">

                <ImageView
                    android:id="@+id/ivSabios"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="28"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/sabios"
                    android:contentDescription="@string/sabios"/>

                <TextView
                    android:id="@+id/tv_sabio0"
                    style="@style/Casilla.Sabio"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_sabio1"
                    style="@style/Casilla.Sabio"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_sabio2"
                    style="@style/Casilla.Sabio"
                    android:text="@string/valor_0" />

                <TextView
                    android:id="@+id/tv_sabio3"
                    style="@style/Casilla.Sabio"
                    android:text="@string/valor_0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutDjins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#F0A9C9"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutSabios">

                <ImageView
                    android:id="@+id/ivDjinns"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="28"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/djins"
                    android:contentDescription="@string/djins"
                    />

                <TextView
                    android:id="@+id/tv_djinn0"
                    style="@style/Casilla.Djinn"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_djinn1"
                    style="@style/Casilla.Djinn"
                    android:text="@string/valor_0" />

                <TextView
                    android:id="@+id/tv_djinn2"
                    style="@style/Casilla.Djinn"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_djinn3"
                    style="@style/Casilla.Djinn"
                    android:text="@string/valor_0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutPalmeras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#DECE91"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutDjins">

                <ImageView
                    android:id="@+id/ivPalmeras"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="28"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/palmeras"
                    android:contentDescription="@string/palmeras" />

                <TextView
                    android:id="@+id/tv_palmera0"
                    style="@style/Casilla.Palmera"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_palmera1"
                    style="@style/Casilla.Palmera"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_palmera2"
                    style="@style/Casilla.Palmera"
                    android:text="@string/valor_0" />

                <TextView
                    android:id="@+id/tv_palmera3"
                    style="@style/Casilla.Palmera"
                    android:text="@string/valor_0"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCastillos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#C5B9BA"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutPalmeras">

                <ImageView
                    android:id="@+id/ivCastillos"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="28"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/castillos"
                    android:contentDescription="@string/castillos" />

                <TextView
                    android:id="@+id/tv_castillo0"
                    style="@style/Casilla.Castillo"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_castillo1"
                    style="@style/Casilla.Castillo"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_castillo2"
                    style="@style/Casilla.Castillo"
                    android:text="@string/valor_0" />

                <TextView
                    android:id="@+id/tv_castillo3"
                    style="@style/Casilla.Castillo"
                    android:text="@string/valor_0"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCamellos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCastillos">

                <ImageView
                    android:id="@+id/ivCamellos"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="28"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/camellos"
                    android:contentDescription="@string/camellos" />

                <TextView
                    android:id="@+id/tv_camello0"
                    style="@style/Casilla.Camello"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_camello1"
                    style="@style/Casilla.Camello"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_camello2"
                    style="@style/Casilla.Camello"
                    android:text="@string/valor_0" />

                <TextView
                    android:id="@+id/tv_camello3"
                    style="@style/Casilla.Camello"
                    android:text="@string/valor_0"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMercado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCamellos"
                 >

                <ImageView
                    android:id="@+id/ivMercado"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="28"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/mercado"
                    android:contentDescription="@string/mercado" />

                <TextView
                    android:id="@+id/tv_mercado0"
                    style="@style/Casilla.Mercado"
                    android:text="@string/valor_0" />

                <TextView
                    android:id="@+id/tv_mercado1"
                    style="@style/Casilla.Mercado"
                    android:text="@string/valor_0" />

                <TextView
                    android:id="@+id/tv_mercado2"
                    style="@style/Casilla.Mercado"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_mercado3"
                    style="@style/Casilla.Mercado"
                    android:text="@string/valor_0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutTotales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutMercado">

                <ImageView
                    android:id="@+id/ivTotales"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="28"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/total"
                    android:contentDescription="@string/total" />

                <TextView
                    android:id="@+id/tv_total0"
                    style="@style/Casilla.Total"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_total1"
                    style="@style/Casilla.Total"
                    android:text="@string/valor_0"/>

                <TextView
                    android:id="@+id/tv_total2"
                    style="@style/Casilla.Total"
                    android:text="@string/valor_0" />

                <TextView
                    android:id="@+id/tv_total3"
                    style="@style/Casilla.Total"
                    android:text="@string/valor_0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>